Fix prompt gradient on mobile

--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -15,6 +15,19 @@
       font-size: 14px;
     }
 
+    .textarea-gradient {
+        width: 20%;
+    }
+
+    .marble:hover ~ .prompt .textarea-gradient {
+        width: 40%;
+    }
+
+    .textarea-gradient2 {
+        left: 20%;
+        width: 40%; 
+    }
+
     .step {
         flex-direction: column;
         justify-content: center;
